--- a/src/main/resources/templates/harvester.scala.html
+++ b/src/main/resources/templates/harvester.scala.html
@@ -4,6 +4,10 @@
 
 <!-- Body Copy -->
 <div style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
+@image_link
+     <br><br>
+</div>
+<div style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
 @harvester_message
      <br><br>
 </div>
