--- a/src/main/resources/templates/harvester.scala.html
+++ b/src/main/resources/templates/harvester.scala.html
@@ -1,4 +1,4 @@
-@(datafield: String, harvester_message: String)
+@(datafield: String, harvester_message: String, harvester_image_link: String)
 <!-- H1 -->
 <div align="center" style="font-family: 'ITC Avant Garde Gothic W04 Md', 'Muli', helvetica, arial; font-size: 20px; color: #5f5f61; padding-bottom: 35px;">New Harvester Emails</div>
 
