--- a/src/main/resources/templates/harvester.scala.html
+++ b/src/main/resources/templates/harvester.scala.html
@@ -4,7 +4,7 @@
 
 <!-- Body Copy -->
 <div style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
-@harvester_image_link
+<img src="@harvester_image_link">
      <br><br>
 </div>
 <div style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
