--- a/src/main/resources/templates/harvester.scala.html
+++ b/src/main/resources/templates/harvester.scala.html
@@ -3,11 +3,11 @@
 <div align="center" style="font-family: 'ITC Avant Garde Gothic W04 Md', 'Muli', helvetica, arial; font-size: 20px; color: #5f5f61; padding-bottom: 35px;">New Harvester Emails</div>
 
 <!-- Body Copy -->
-<div style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
+<div align="center" style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
 <img src="@harvester_image_link">
      <br><br>
 </div>
-<div style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
+<div align="center" style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
 @harvester_message
      <br><br>
 </div>
