Gilding the lily.

--- a/src/main/resources/templates/harvester.scala.html
+++ b/src/main/resources/templates/harvester.scala.html
@@ -8,7 +8,7 @@
      <br><br>
 </div>
 <div align="center" style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
-@harvester_message
+Today we would like you to take a look at<br>@harvester_message
      <br><br>
 </div>
 
