--- a/src/main/resources/templates/harvester.scala.html
+++ b/src/main/resources/templates/harvester.scala.html
@@ -1,14 +1,14 @@
 @(datafield: String, harvester_message: String, harvester_image_link: String)
 <!-- H1 -->
-<div align="center" style="font-family: 'ITC Avant Garde Gothic W04 Md', 'Muli', helvetica, arial; font-size: 20px; color: #5f5f61; padding-bottom: 35px;">New Harvester Emails</div>
+<div align="center" style="font-family: 'ITC Avant Garde Gothic W04 Md', 'Muli', helvetica, arial; font-size: 20px; color: #5f5f61; padding-bottom: 35px;">Welcome to the New Harvester Emails</div>
 
 <!-- Body Copy -->
 <div align="center" style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
-<img src="@harvester_image_link">
+<a href="@datafield"><img src="@harvester_image_link"></a>
      <br><br>
 </div>
 <div align="center" style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
-Today we would like you to take a look at<br>@harvester_message
+Today we would like you to take a look at<br><a href="@datafield">@harvester_message</a>
      <br><br>
 </div>
 
@@ -16,9 +16,9 @@ Today we would like you to take a look at<br>@harvester_message
 <div align="center" style="padding-bottom: 35px;"><a href="@datafield">
     <button style="height:40px; background-color:  #0099cc; border: none; font-family: 'Muli' helvetica, arial; font-size: 16px; color: #ffffff; padding: 0px 25px; margin-bottom:12px; border-radius: 3px;">
         <span class="blank" style="text-decoration:none !important;">
-           Harvest an account
+           Harvest this account.
         </span>
-        <img style="position: relative; top: 2px; padding-left: 20px" src="http://i224.photobucket.com/albums/dd37/AgathaTinuviel/arrow_white.png" alt="&rarr;" border="0">
+        <img style="position: relative; top: 2px; padding-left: 20px" src="https://assets.tokbox.com/email/arrow_white.png" alt="&rarr;" border="0">
     </button></a>
 
 </div>
