--- a/src/main/resources/templates/tos_production.scala.html
+++ b/src/main/resources/templates/tos_production.scala.html
@@ -8,7 +8,7 @@ To whom it may concern,
 <br><br>
 By creating and using your TokBox account, you agreed to the TokBox Terms of Service (TOS). It has come to our attention that you have created and used multiple trial accounts, which are restricted under our TOS to be used for evaluation and demonstration purposes only. It is apparent that your application has been using those trial accounts for production purposes in violation of this agreement. 
 <br><br>
-With this email, TokBox is notifying you of this violation of our TOS. We request that you take immediate corrective action by (a) entering a valid credit card through your account dashboard to create a paid production account, (b) contacting us to arrange invoice billing, or (c) closing and ceasing all use of you trial accounts. 
+With this email, TokBox is notifying you of this violation of our TOS. We request that you take immediate corrective action by (a) entering a valid credit card through your account dashboard to create a paid production account, (b) contacting us to arrange invoice billing, or (c) closing and ceasing all use of your trial accounts. 
 <br><br>
 Failure to take corrective action within 24 hours of this notice will result in the termination your accounts and the denial of additional trial accounts for your application.
 <br><br>
