slightly less tiny typo

--- a/src/main/resources/templates/tos_production.scala.html
+++ b/src/main/resources/templates/tos_production.scala.html
@@ -10,7 +10,7 @@ By creating and using your TokBox account, you agreed to the TokBox Terms of Ser
 <br><br>
 With this email, TokBox is notifying you of this violation of our TOS. We request that you take immediate corrective action by (a) entering a valid credit card through your account dashboard to create a paid production account, (b) contacting us to arrange invoice billing, or (c) closing and ceasing all use of your trial accounts. 
 <br><br>
-Failure to take corrective action within 24 hours of this notice will result in the termination your accounts and the denial of additional trial accounts for your application.
+Failure to take corrective action within 24 hours of this notice will result in the termination of your accounts and the denial of additional trial accounts for your application.
 <br><br>
 </div>
 
