--- a/src/main/resources/templates/harvester.scala.html
+++ b/src/main/resources/templates/harvester.scala.html
@@ -9,7 +9,7 @@
 </div>
 @harvester_analysis_image_link.map{hail =>
 <div align="center" style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
-<a href="@datafield"><img src="@hail"></a>
+<a href="@datafield"><img style="max-width: 600px" src="@hail"></a>
      <br><br>
 	}
 </div>
