--- a/src/main/resources/templates/notification_you_joined_another_account.scala.html
+++ b/src/main/resources/templates/notification_you_joined_another_account.scala.html
@@ -7,7 +7,7 @@
 
 <!-- Body Copy -->
 <div style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
-    You have been invited to join another OpenTok account. To use this account, please click on the link below:
+    You have joined another OpenTok account. To use this account, please click on the link below:
 </div>
 
 <!-- CTA Button with subtitle -->
