Change copy from account portal to account

--- a/src/main/resources/templates/payment_details_added.scala.html
+++ b/src/main/resources/templates/payment_details_added.scala.html
@@ -4,12 +4,12 @@
 
 <!-- Body Copy -->
 <div style="line-height: 24px; padding-bottom: 35px; font-family: 'Muli', helvetica, arial;">
-    Thanks for entering your payment information. <br><br>To manage or cancel your subscription, please login to the Account portal.
+    Thanks for entering your payment information. <br><br>To manage or cancel your subscription, please login to your account.
 </div>
 <div align="center" style="padding-bottom: 35px;"><a href="@account_portal_url">
     <button style="height:40px; background-color:  #0099cc; border: none; font-family: 'Muli' helvetica, arial; font-size: 16px; color: #ffffff; padding: 0px 25px; margin-bottom:12px; border-radius: 3px;">
         <span class="blank" style="text-decoration:none !important;">
-            Login to Account Portal
+            Login to your account
         </span>
         <img style="position: relative; top: 2px; padding-left: 20px" src="https://assets.tokbox.com/email/arrow_white.png" alt="&rarr;" border="0">
     </button></a>
