--- a/src/main/resources/templates/customer_usage.scala.html
+++ b/src/main/resources/templates/customer_usage.scala.html
@@ -20,29 +20,31 @@
 
 @MAX_UNSUPPORTED_BROWSERS = @{ 5 }
 
+@FONT_FAMILY = @{ "'Raleway', 'Proxima Nova', helvetica, arial" }
+
 @greySectionStyles = @{ "box-sizing: border-box; max-width: 510px; background-color: transparent; padding: 0; margin: 0" }
 
 @blueSectionStyles = @{ "box-sizing: border-box; width: 100%; background-color: #fafbfd; padding: 20px; border: solid 1px #d2dcef; margin: 10px 0 30px 0" }
 
 <!-- Texts -->
 
-@titleStyles = @{ "font-family: 'Muli', helvetica, arial; font-size: 20px; color: #5f6062; font-weight: 600; padding: 0; margin: 0 0 20px 0" }
+@titleStyles = @{ "font-family: " + FONT_FAMILY + "; font-size: 20px; color: #5f6062; font-weight: 600; padding: 0; margin: 0 0 20px 0" }
 
-@subTitleStyles = @{ "font-family: 'Muli', helvetica, arial; font-size: 17px; color: #5f6062; font-weight: 600; padding: 0; margin: 0 0 30px 0" }
+@subTitleStyles = @{ "font-family: " + FONT_FAMILY + "; font-size: 17px; color: #5f6062; font-weight: 600; padding: 0; margin: 0 0 30px 0" }
 
-@headerStyles = @{ "font-family: 'Muli', helvetica, arial; font-size: 34px; color: #5f6062; font-weight: 300; border-width: 0; border-color: #0099cc; border-style: solid; border-left-width: 1px; padding: 0 0 0 18px; margin: 0 0 20px 0; display: block" }
+@headerStyles = @{ "font-family: " + FONT_FAMILY + "; font-size: 34px; color: #5f6062; font-weight: 300; border-width: 0; border-color: #0099cc; border-style: solid; border-left-width: 1px; padding: 0 0 0 18px; margin: 0 0 20px 0; display: block" }
 
-@paragraphStyles = @{ "font-family: 'Muli', helvetica, arial; font-size: 16px; color: #5f6062; margin: 0; padding: 0" }
+@paragraphStyles = @{ "font-family: " + FONT_FAMILY + "; font-size: 16px; color: #5f6062; margin: 0; padding: 0" }
 
 @bold = @{ "font-weight: 600" }
 
 <!-- White cards -->
 
-@titleCardStyles = @{ "font-family: 'Muli', helvetica, arial; font-size: 34px; color: #5f6062; font-weight: 300; display: block; padding: 0; margin: 0 0 5px 0" }
+@titleCardStyles = @{ "font-family: " + FONT_FAMILY + "; font-size: 34px; color: #5f6062; font-weight: 300; display: block; padding: 0; margin: 0 0 5px 0" }
 
 @paragraphCardStyles = @{ "padding: 0; margin: 0" }
 
-@cardStyles = @{ "text-align: center; box-sizing: border-box; display: inline-block; width: 164px; background-color: #fafbfd; border: solid 1px #d2dcef; padding: 25px 0px; margin: 0; border-radius: 5px" }
+@cardStyles = @{ "text-align: center; box-sizing: border-box; display: inline-block; width: 164px; background-color: #fafbfd; border: solid 1px #d2dcef; padding: 25px 0px; margin: 0; border-radius: 5px; overflow: hidden; word-wrap: break-word; white-space: normal; vertical-align: top" }
 
 @cardContainerStyles = @{ "font-size: 0" }
 
@@ -50,7 +52,7 @@
 
 <!-- Links -->
 
-@linkStyles = @{ "font-family: 'Muli', helvetica, arial; font-size: 16px; color: #0099cc; text-decoration: none" }
+@linkStyles = @{ "font-family: " + FONT_FAMILY + "; font-size: 16px; color: #0099cc; text-decoration: none" }
 
 @linkImgStyles = @{ "position: relative; top: 2px; padding-left: 8px" }
 
@@ -60,14 +62,16 @@
 
 @separatorStyles = @{ "box-sizing: border-box; display: block; width: 100%; height: 1px; background-color: #d2dcef; margin: 30px 0 20px 0" }
 
-@containerWithRightSeparator = @{ "box-sizing: border-box; max-width: 100%; padding: 0 20px 0 0; margin: 0 0 20px 0; border-width: 0; border-color: #d2dcef; border-style: solid; border-right-width: 1px; display: inline-block; min-width: 180px" }
+@containerWithRightSeparator = @{ "box-sizing: border-box; width: 40%; padding: 0 20px 0 0; margin: 0 0 20px 0; border-width: 0; border-color: #d2dcef; border-style: solid; border-right-width: 1px; display: inline-block; overflow: hidden; word-wrap: break-word; white-space: normal" }
+
+@paragraphRightFloatingStyles = @{ paragraphStyles +  "; box-sizing: border-box; width: 60%; display: inline-block; padding-left: 20px; padding-top: 2px; vertical-align: top; overflow: hidden; word-wrap: break-word; white-space: normal" }
 
 <!-- Lists -->
 
 @listStyles = @{ "box-sizing: border-box; display: inline-block; width: auto; margin-top: 8px" }
 @titleListStyles = @{ "font-size: 17px; margin-bottom: 5px" }
 
-@listItemStyles = @{ "padding: 5px 0; font-family: 'Muli', helvetica, arial; font-size: 16px; color: #5f6062; display: block" }
+@listItemStyles = @{ "padding: 5px 0; font-family: " + FONT_FAMILY + "; font-size: 16px; color: #5f6062; display: block" }
 
 @updateItemStyle = @{ "margin: 8px 0" }
 
@@ -136,58 +140,60 @@
         <div style="@cardContainerStyles; margin: 10px 0 30px 0">
             @recommended_browser.zipWithIndex.map{ case(browser, index) =>
               @if(index % 2 != 0) {
-                  <span style="@cardStyles; margin: 0 9px">
+                  <span style="@cardStyles; margin: 0 9px; word-wrap: normal">
               } else {
-                  <span style="@cardStyles">
+                  <span style="@cardStyles; word-wrap: normal">
               }
                 <img style="@iconCardStyles" src="@browser.icon" border="0"/>
-                <span style="@titleCardStyles">@browser.name</span>
+                <span style="@titleCardStyles; overflow:hidden; text-overflow: ellipsis">@browser.name</span>
                 <p style="@paragraphStyles; @paragraphCardStyles">@browser.versions(0)</p>
             </span>
             }
         </div>
 
         @if(!expired_token.isEmpty) {
-            <div style="@containerWithRightSeparator">
-                <h1 style="@titleStyles; @titleListStyles">Expired Tokens</h1>
-                <div style="@listStyles">
-                    @for(expired <- expired_token) {
-                    <span style="@listItemStyles">Project @expired.name: @expired.expiredTokens</span>
-                    }
+            <div style="width: 100%; font-size: 0">
+                <div style="@containerWithRightSeparator">
+                    <h1 style="@titleStyles; @titleListStyles">Expired Tokens</h1>
+                    <div style="@listStyles">
+                        @for(expired <- expired_token) {
+                        <span style="@listItemStyles">Project @expired.name: @expired.expiredTokens</span>
+                        }
+                    </div>
+                </div>
+                <div style="@paragraphRightFloatingStyles">
+                    You are using expired tokens. Users cannot join sessions with expired tokens.
                 </div>
             </div>
-            <div style="@paragraphStyles; display: inline-block; padding-left: 20px; padding-top: 2px; max-width: 300px; vertical-align: top">
-                You are using expired tokens. Users cannot join sessions with expired tokens.
-            </div>
-            <br>
         }
 
         @if(!unsupported_sdk_client.isEmpty || !unsupported_sdk_server.isEmpty) {
-            <div style="@containerWithRightSeparator">
-                <h1 style="@titleStyles; @titleListStyles">Unsupported SDKs</h1>
-                <div style="@listStyles">
-                @if(!unsupported_sdk_client.isEmpty) {
-                    <span style="@listItemStyles; @bold">Client</span>
-                        @for(unsupported <- unsupported_sdk_client) {
+            <div style="width: 100%; font-size: 0">
+                <div style="@containerWithRightSeparator">
+                    <h1 style="@titleStyles; @titleListStyles">Unsupported SDKs</h1>
+                    <div style="@listStyles">
+                    @if(!unsupported_sdk_client.isEmpty) {
+                        <span style="@listItemStyles; @bold">Client</span>
+                            @for(unsupported <- unsupported_sdk_client) {
+                                <span style="@listItemStyles">@unsupported.name: @unsupported.versions(0)@for(i <- 1 until unsupported.versions.size){, @unsupported.versions(i)}</span>
+                            }
+                    }
+                    @if(!unsupported_sdk_server.isEmpty) {
+                        @if(unsupported_sdk_client.isEmpty) {
+                            <span style="@listItemStyles; @bold; @unsupportedSdkWithoutClient">Server</span>
+                        } else {
+                            <span style="@listItemStyles; @bold; @unsupportedSdkWithClient">Server</span>
+                        }
+                        @for(unsupported <- unsupported_sdk_server) {
                             <span style="@listItemStyles">@unsupported.name: @unsupported.versions(0)@for(i <- 1 until unsupported.versions.size){, @unsupported.versions(i)}</span>
                         }
-                }
-                @if(!unsupported_sdk_server.isEmpty) {
-                    @if(unsupported_sdk_client.isEmpty) {
-                        <span style="@listItemStyles; @bold; @unsupportedSdkWithoutClient">Server</span>
-                    } else {
-                        <span style="@listItemStyles; @bold; @unsupportedSdkWithClient">Server</span>
                     }
-                    @for(unsupported <- unsupported_sdk_server) {
-                        <span style="@listItemStyles">@unsupported.name: @unsupported.versions(0)@for(i <- 1 until unsupported.versions.size){, @unsupported.versions(i)}</span>
-                    }
-                }
+                    </div>
+                </div>
+                <div style="@paragraphRightFloatingStyles">
+                    You are currently using SDKs that are no longer supported. Please update your clients.
                 </div>
             </div>
-            <div style="@paragraphStyles; display: inline-block; padding-left: 20px; padding-top: 2px; max-width: 290px; vertical-align: top">
-                You are currently using SDKs that are no longer supported. Please update your clients.
-            </div>
-            <br>
         }
 
         @if(!outdated_browser.isEmpty) {
@@ -195,7 +201,7 @@
                 <h1 style="@titleStyles; @titleListStyles">Outdated Browsers</h1>
                 <p style="@paragraphStyles; margin: 0 0 20px 0;">Your users are using browsers that are not recommended. Your app may not work or work well for these users. Consider asking your users to upgrade.</p>
             } else {
-                <div style="@containerWithRightSeparator">
+                <div style="@containerWithRightSeparator; width: auto;">
                     <h1 style="@titleStyles; @titleListStyles">Outdated Browsers</h1>
                     <div style="@listStyles">
                         @for(outdate <- outdated_browser) {
