Checking Proxima Nova (#30)

--- a/src/main/resources/templates/customer_usage.scala.html
+++ b/src/main/resources/templates/customer_usage.scala.html
@@ -20,7 +20,7 @@
 
 @MAX_UNSUPPORTED_BROWSERS = @{ 5 }
 
-@FONT_FAMILY = @{ "'Raleway', 'Proxima Nova', helvetica, arial" }
+@FONT_FAMILY = @{ "'Proxima Nova', 'Raleway', helvetica, arial" }
 
 @greySectionStyles = @{ "box-sizing: border-box; max-width: 510px; background-color: transparent; padding: 0; margin: 0" }
 
