--- a/src/main/resources/templates/customer_usage.scala.html
+++ b/src/main/resources/templates/customer_usage.scala.html
@@ -46,7 +46,7 @@
 
 @paragraphCardStyles = @{ "padding: 0; margin: 0" }
 
-@cardStyles = @{ "text-align: center; box-sizing: border-box; display: inline-block; width: 164px; background-color: #fafbfd; border: solid 1px #d2dcef; padding: 25px 0px; margin: 0; border-radius: 5px; overflow: hidden; word-wrap: break-word; white-space: normal; vertical-align: top" }
+@cardStyles = @{ "text-align: center; box-sizing: border-box; display: inline-block; width: 164px; background-color: #fff; border: solid 1px #d2dcef; padding: 25px 0px; margin: 0; border-radius: 5px; overflow: hidden; word-wrap: break-word; white-space: normal; vertical-align: top" }
 
 @cardContainerStyles = @{ "font-size: 0" }
 
