Added feedback by Acacia round three (#36)

--- a/src/main/resources/templates/customer_usage.scala.html
+++ b/src/main/resources/templates/customer_usage.scala.html
@@ -50,7 +50,7 @@
 
 @cardContainerStyles = @{ "font-size: 0" }
 
-@iconCardStyles = @{ "display: inline-block; margin: 0 0 5px 0; padding: 0; border: 0" }
+@iconCardStyles = @{ "display: inline-block; margin: 0 0 5px 0; padding: 0; border: 0; width: 60px; height: 60px" }
 
 <!-- Links -->
 
@@ -89,7 +89,7 @@
 
         <h2 style="@subTitleStyles">@date</h2>
 
-        <h1 style="@nameStyles">@name</h1>
+        <h1 style="@nameStyles">@name,</h1>
 
         <h1 style="@headerStyles; margin-top: 40px">Usage</h1>
 
