--- a/src/main/resources/templates/customer_usage.scala.html
+++ b/src/main/resources/templates/customer_usage.scala.html
@@ -26,7 +26,7 @@
 
 @greySectionStyles = @{ "box-sizing: border-box; max-width: 510px; background-color: transparent; padding: 0; margin: 0" }
 
-@blueSectionStyles = @{ "box-sizing: border-box; width: 100%; background-color: #fafbfd; padding: 20px; border: solid 1px #d2dcef; margin: 10px 0 30px 0" }
+@blueSectionStyles = @{ "box-sizing: border-box; width: 100%; background-color: #fff; padding: 20px; border: solid 1px #d2dcef; margin: 10px 0 30px 0" }
 
 <!-- Texts -->
 
