ECO-592: Update support plan upgrade template header styling (#52)
* Add ensime files to gitignore.

* Update header style for support plan upgrade template.

--- a/src/main/resources/templates/support_plan_upgrade.scala.html
+++ b/src/main/resources/templates/support_plan_upgrade.scala.html
@@ -1,6 +1,6 @@
 <!-- H2 -->
 @import com.opentok.raven.resources._
-<div style="font-family: @Styles.FONT_HEADING; font-size:16px; line-height:24px; color:"#38393b;">Thank you for signing up for premium support!</div>
+<div style="font-family: @Styles.FONT_HEADING; font-size:20px; padding-bottom: 35px; color:#5f5f61;">Thank you for signing up for premium support!</div>
 <!-- Body Copy with a link -->
 <div style=" font-family: @Styles.FONT_TEXT; line-height: 24px; padding-bottom: 35px;">
   <br>
@@ -10,7 +10,7 @@ Please contact us if you have any issues while building your app at
         premiumsupport@@tokbox.com.</font><img style="position: relative; top: 2px; padding-left: 10px" src="https://assets.tokbox.com/email/arrow_blue.png" alt="&rarr;" border="0">
     </a>
     <br>
-    <br>For any pricing or business-related questions, please refer to our 
+    <br>For any pricing or business-related questions, please refer to our
     <a href="http://tokbox.com/opentok/support/faq" style=" font-family: @Styles.FONT_TEXT; color: #0099cc; line-height: 24px; text-decoration: none"><font color="#0099cc">
         FAQ</font><img style="position: relative; top: 2px; padding-left: 10px" src="https://assets.tokbox.com/email/arrow_blue.png" alt="&rarr;" border="0">
     </a>or e-mail us at
