Updated credit_extension copy, fromNames (#56)

--- a/src/main/resources/templates/credit_extension.scala.html
+++ b/src/main/resources/templates/credit_extension.scala.html
@@ -5,8 +5,8 @@
 
 <!-- Body Copy -->
 <div style="line-height: 24px; padding-bottom: 35px; font-family: @Styles.FONT_TEXT;">
-    You’ve received $@creditIncrease in free credits as part of your OpenTok trial.<br>
-    These credits will automatically apply to your usage of any OpenTok feature.
+    A $@creditIncrease credit has been added to your account.<br>
+    This credit will automatically apply to your usage of any OpenTok feature.
 </div>
 
 <!-- CTA Button with subtitle -->
