Updating notification for the expiration warning (#57)
* Updating notification for the expiration warning

* Update message for 30 days warning

* Fix typo

--- a/src/main/resources/templates/account_expiration_warning.scala.html
+++ b/src/main/resources/templates/account_expiration_warning.scala.html
@@ -1,11 +1,12 @@
 @(login_url: com.opentok.raven.model.Email.Url)
 @import com.opentok.raven.resources._
 <!-- H1 -->
-<div align="center" style="font-family: @Styles.FONT_HEADING; font-size: 20px; color: #5f5f61; padding-bottom: 35px;">Account Expiration Warning</div>
+<div align="center" style="font-family: @Styles.FONT_HEADING; font-size: 20px; color: #5f5f61; padding-bottom: 35px;">Your OpenTok trial expires in 30 days</div>
 
 <!-- Body Copy -->
 <div style="line-height: 24px; padding-bottom: 35px; font-family: @Styles.FONT_TEXT;">
-   Your OpenTok trial ends tomorrow. To make sure your service continues uninterrupted, please confirm your subscription by visiting your OpenTok account and entering payment information.
+  We wanted to let you know that your free OpenTok trial expires in 30 days.<br>
+  If you would like to continue your service with us, please update your payment information to continue using OpenTok.
 </div>
 
 <!-- CTA Button with subtitle -->
