--- a/src/main/resources/templates/callback_disabled.scala.html
+++ b/src/main/resources/templates/callback_disabled.scala.html
@@ -6,11 +6,11 @@
 
 <!-- Body Copy -->
 <div style="line-height: 24px; padding-bottom: 35px; font-family: @Styles.FONT_TEXT;">
-    Uh oh! It appears we are unable to reach a target you have specified for session event monitoring.
+    Uh oh! It appears we are unable to reach your server endpoint that you have specified for session event monitoring.
     As a result, Session Monitoring has been suspended for the endpoint configured on project ID @project_id:
     <pre>@target_url</pre>
-    Once the issue is fixed, you can re-enable session monitoring events by visiting your project configuration at 
-    <a href="https://tokbox.com/account">https://tokbox.com/account</a>.
+    Once you fix the issue, you can re-enable session monitoring events by visiting your project configuration at 
+    <a href="https://tokbox.com/account">https://tokbox.com/account</a> and reentering or updating the callback URL for Session Monitoring.
     
     If the issue persists or you have further questions, please contact us at <a href="mailto:support@@tokbox.com">support@@tokbox.com</a>.
 </div>
