Update Feedback Form in Cancellation Email (#65)
* Update account_credit_expiration.scala.html

We lost the google form this was submitting to (still trying to find it), and I didn't like the questions anyway. Here is a new form that we can actually see the responses to.

* changing form URLs

* make survey seem quick

--- a/src/main/resources/templates/account_expiration_warning.scala.html
+++ b/src/main/resources/templates/account_expiration_warning.scala.html
@@ -26,8 +26,8 @@
    Not planning to move forward with OpenTok? Let us know how we can improve:
 
     <!-- CTA link -->
-  <a href="https://docs.google.com/a/tokbox.com/spreadsheet/viewform?formkey=dGhaamVVWHZweUg1ZlpGNVlkNmpmZXc6MQ#gid=0" style=" font-family: @Styles.FONT_TEXT; color: #0099cc; line-height: 24px; text-decoration: none">
-    <font color="#0099cc">Take our survey</font>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfNcWP8JjVbf8iYXzCffg2vVWnq9vYeQn2kFpnnnA5OjfXgXA/viewform?usp=sf_link" style=" font-family: @Styles.FONT_TEXT; color: #0099cc; line-height: 24px; text-decoration: none">
+    <font color="#0099cc">Take our 30-second survey</font>
     <img style="position: relative; top: 2px; padding-left: 10px" src="https://assets.tokbox.com/email/arrow_blue.png" alt="&rarr;" border="0">
   </a>
 </div>
