--- a/src/main/resources/templates/account_credit_expiration.scala.html
+++ b/src/main/resources/templates/account_credit_expiration.scala.html
@@ -23,12 +23,12 @@
 <!-- Body Copy with a link -->
 <div style=" font-family: @Styles.FONT_TEXT; line-height: 24px; padding-bottom: 35px;">
 
-    If you’re not planning to continue with a subscription, we'd love to find out why OpenTok wasn't right for you so that we can improve our platform. <br>
-    Please take 2 minutes to fill out our
+    If you’re not planning to continue with a subscription, we'd love to find out why OpenTok wasn't right for you. <br>
+    Please take 30 seconds to fill out a 
 
     <!-- CTA link -->
-  <a href="https://docs.google.com/a/tokbox.com/spreadsheet/viewform?formkey=dGhaamVVWHZweUg1ZlpGNVlkNmpmZXc6MQ#gid=0" style=" font-family: @Styles.FONT_TEXT; color: #0099cc; line-height: 24px; text-decoration: none">
-    <font color="#0099cc">survey.</font>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfNcWP8JjVbf8iYXzCffg2vVWnq9vYeQn2kFpnnnA5OjfXgXA/viewform?usp=sf_link" style=" font-family: @Styles.FONT_TEXT; color: #0099cc; line-height: 24px; text-decoration: none">
+    <font color="#0099cc">quick survey.</font>
     <img style="position: relative; top: 2px; padding-left: 10px" src="https://assets.tokbox.com/email/arrow_blue.png" alt="&rarr;" border="0">
   </a>
 </div>
