--- a/src/main/resources/templates/account_credit_expiration_warning.scala.html
+++ b/src/main/resources/templates/account_credit_expiration_warning.scala.html
@@ -26,12 +26,11 @@
    Not planning to move forward with OpenTok? Let us know how we can improve by taking our
 
     <!-- CTA link -->
-  <a href="https://docs.google.com/a/tokbox.com/spreadsheet/viewform?formkey=dGhaamVVWHZweUg1ZlpGNVlkNmpmZXc6MQ#gid=0" style=" font-family: @Styles.FONT_TEXT; color: #0099cc; line-height: 24px; text-decoration: none">
-    <font color="#0099cc">survey</font>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfNcWP8JjVbf8iYXzCffg2vVWnq9vYeQn2kFpnnnA5OjfXgXA/viewform?usp=sf_link" style=" font-family: @Styles.FONT_TEXT; color: #0099cc; line-height: 24px; text-decoration: none">
+    <font color="#0099cc">quick survey</font>
     <img style="position: relative; top: 2px; padding-left: 10px" src="https://assets.tokbox.com/email/arrow_blue.png" alt="&rarr;" border="0">
   </a>
 </div>
 
 <!-- Thank You -->
 <div style="line-height: 24px; font-family: @Styles.FONT_TEXT;">Thanks for trying OpenTok,<br><br>The TokBox Team</div>
-
