--- a/src/main/resources/templates/account_expiration_confirmation.scala.html
+++ b/src/main/resources/templates/account_expiration_confirmation.scala.html
@@ -4,11 +4,11 @@
 
 <!-- Body Copy -->
 <div style="line-height: 24px; padding-bottom: 35px; font-family: @Styles.FONT_TEXT;">
-    We'd love to find out why OpenTok wasn't right for you so that we can improve our platform. Please take 2 minutes to fill out our survey:
+    We'd love to find out why OpenTok wasn't right for you. Please take 30 seconds to fill out our quick survey:
 </div>
 
 <!-- CTA Button with subtitle -->
-<div align="center" style="padding-bottom: 35px;"><a href="https://docs.google.com/a/tokbox.com/spreadsheet/viewform?formkey=dGhaamVVWHZweUg1ZlpGNVlkNmpmZXc6MQ#gid=0">
+<div align="center" style="padding-bottom: 35px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfNcWP8JjVbf8iYXzCffg2vVWnq9vYeQn2kFpnnnA5OjfXgXA/viewform?usp=sf_link">
     <button style="height:40px; background-color:  #0099cc; border: none; font-family: @Styles.FONT_TEXT; font-size: 16px; color: #ffffff; padding: 0px 25px; margin-bottom:12px; border-radius: 3px;">
         <span class="blank" style="text-decoration:none !important;">
             Take our survey
