--- a/src/main/resources/templates/password_changed.scala.html
+++ b/src/main/resources/templates/password_changed.scala.html
@@ -4,7 +4,7 @@
 
 <!-- Body Copy -->
 <div style="line-height: 24px; padding-bottom: 35px; font-family: @Styles.FONT_TEXT;">
-    This is a notification that your password has been reset. If this was not done by you, please contact
+    This is a notification that your TokBox account password has been reset. If this was not done by you, please contact
     <a href="mailto:support@@tokbox.com">support@@tokbox.com</a>.
 </div>
 <!-- Thank You -->
